# CineForge

./: AGENTS.md  Jellyfish_AGENTS.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/routes/film/: __init__.py  engine.py
backend/app/core/contracts/: video_generation.py
backend/app/core/integrations/: video_capabilities.py
backend/app/services/film/: engine_state.py  generated_video.py  stock_assets.py  visual_qa.py
backend/app/services/studio/: shot_extracted_dialogue_candidates.py
backend/tests/: test_film_engine_api.py  test_visual_qa.py
docs/: AI_FILM_ENGINE_IMPLEMENTATION.md  AI_FILM_ENGINE_TEST_CASES.md  AI_FILM_ENGINE_USER_MANUAL.md  TASK_PROGRESS_INDEX.md
docs/Codex_Workflow_Prompts/: 00_GLOBAL_RULES.md  01_WORKFLOW_ARCHITECTURE_PROMPT.md  02_STAGE1_NOVEL_ENGINE_PROMPT.md  03_STAGE2_ASSET_PIPELINE_PROMPT.md  04_STAGE3_IMAGE_RUNTIME_PROMPT.md  05_STAGE4_VIDEO_RUNTIME_PROMPT.md  06_QA_RETRY_ENGINE_PROMPT.md  07_STUDIO_UI_PROMPT.md  08_DATA_SCHEMA_PROMPT.md  09_FINAL_INTEGRATION_PROMPT.md  README.md
front/src/: App.tsx
front/src/layouts/: MainLayout.tsx
front/src/pages/aiStudio/filmEngine/: FilmEngineDashboard.tsx
front/src/pages/aiStudio/project/ProjectWorkbench/: constants.tsx  index.tsx
front/src/pages/aiStudio/project/ProjectWorkbench/tabs/: DashboardTab.tsx
front/src/pages/aiStudio/shots/: ChapterShotsPage.tsx
front/src/services/: filmEngine.ts  http.ts
src/: __init__.py
src/apps/: __init__.py
src/apps/comic_gen/: __init__.py  api.py  llm.py  models.py  pipeline.py
src/film_engine/: __init__.py  core.py  demo.py  jellyfish_base.py  model_adapters.py  platform.py  post_production.py  records.py  run_server.py  server.py  studio.py  text_to_drama.py  workflow_control.py
src/models/: __init__.py  common.py  image.py  kling.py  vidu.py  wanx.py
src/utils/: __init__.py  media_refs.py  provider_media.py  provider_registry.py
tests/: test_closed_loop_production.py  test_jellyfish_base_status.py  test_luminai_runtime_entrypoint.py  test_model_adapter_layer.py  test_text_to_drama_pipeline.py  test_workflow_control.py
